monitoring/blackbox-exporter/blackbox-exporter-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blackbox-exporter
spec:
  rules:
  - host: blackbox.example.com
    http:
      paths:
      - backend:
          serviceName: blackbox-exporter
          servicePort: 9115
